@@ -14,6 +14,10 @@ icon:plus[] Storage: It will be possible to use an AWS S3 compatible storage for
 
 icon:plus[] Core: The core Vert.x library was updated to version 3.5.1
 
+icon:plus[] Config: It is now possible to configure the elasticsearch startup timeout via the `search.startupTimeout` field in the `mesh.yml` or via the `MESH_ELASTICSEARCH_STARTUP_TIMEOUT` environment variable.
+
+icon:check[] Core: The server will now shutdown if an error has been detected during startup.
+
 icon:check[] REST: Fixed an error which lead to inconsistent properties being shown within the job endpoint response.
 
 icon:check[] Search: When calling reindex via the `/api/v1/search/reindex` reindexing stopped after a certain amount of
